--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "files": [
+    "index.js"
+  ],
   "devDependencies": {
     "@matthewp/compile": "^1.1.0",
     "custom-attributes": "^1.1.3"
