--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "test": "testee --browsers chrome test/basics.html"
+  },
   "files": [
     "index.js"
   ],
   "devDependencies": {
     "@matthewp/compile": "^1.1.0",
-    "custom-attributes": "^1.1.3"
+    "custom-attributes": "^1.1.3",
+    "testee": "^0.8.1"
   }
 }
